--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -3,17 +3,8 @@
   <!-- Page Content -->
   <div class="container">
 
-    <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">Blog Home Two
-      <small>Subheading</small>
-    </h1>
-
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item">
-        <a href="/">Home</a>
-      </li>
-      <li class="breadcrumb-item active">Blog Home 2</li>
-    </ol>
+    <!-- Page Heading -->
+    <h1 class="mt-4 mb-3">Current Posts:</h1>
 
     <!-- Blog Post -->
     <div id="posts">
