--- a/views/user/footer.ejs
+++ b/views/user/footer.ejs
@@ -1,7 +1,7 @@
 <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Let's Chat! 2020</p>
     </div>
     <!-- /.container -->
   </footer>
