--- a/views/user/post.ejs
+++ b/views/user/post.ejs
@@ -12,7 +12,7 @@
       <li class="breadcrumb-item">
         <a href="/">Home</a>
       </li>
-      <li class="breadcrumb-item active">Blog Home</li>
+      <li class="breadcrumb-item active">Post Details</li>
     </ol>
 
     <div class="row">
